Fixed spacing issue in previous commit

--- a/recipes/static/recipes/styles.css
+++ b/recipes/static/recipes/styles.css
@@ -170,7 +170,7 @@ a:hover #boxPanel, a:hover #newRecipePanel {
 }
 
 .buttonCell {
-  text-align: center;
+  padding-left: 1em;
 }
 
 .justifyBlock {
